--- a/Framework/InitAllSettings.xaml
+++ b/Framework/InitAllSettings.xaml
@@ -26,6 +26,7 @@
       <x:String>UiPath.Core.Activities</x:String>
       <x:String>GlobalVariablesNamespace</x:String>
       <x:String>GlobalConstantsNamespace</x:String>
+      <x:String>System.IO</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -79,9 +80,15 @@
       <AssemblyReference>System.Collections</AssemblyReference>
       <AssemblyReference>System.Collections.NonGeneric</AssemblyReference>
       <AssemblyReference>UiPath.Workflow</AssemblyReference>
+      <AssemblyReference>System.Memory.Data</AssemblyReference>
+      <AssemblyReference>System.Linq.Async</AssemblyReference>
+      <AssemblyReference>System.IO.FileSystem.Watcher</AssemblyReference>
+      <AssemblyReference>System.IO.Packaging</AssemblyReference>
+      <AssemblyReference>System.IO.FileSystem.AccessControl</AssemblyReference>
+      <AssemblyReference>System.IO.FileSystem.DriveInfo</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Initialize, populate and output a configuration Dictionary to be used throughout the project. &#xA;Settings and constants are read from the local configuration file, and assets are fetched from Orchestrator. &#xA;Asset values overwrite settings and constant values if they are defined with the same name." DisplayName="Initialize All Settings" sap:VirtualizedContainerService.HintSize="2108,949.3733333333332" sap2010:WorkflowViewState.IdRef="Sequence_5">
+  <Sequence sap2010:Annotation.AnnotationText="Initialize, populate and output a configuration Dictionary to be used throughout the project. &#xA;Settings and constants are read from the local configuration file, and assets are fetched from Orchestrator. &#xA;Asset values overwrite settings and constant values if they are defined with the same name." DisplayName="Initialize All Settings" sap:VirtualizedContainerService.HintSize="1545.3333333333333,908.6666666666666" sap2010:WorkflowViewState.IdRef="Sequence_5">
     <Sequence.Variables>
       <Variable x:TypeArguments="scg:List(x:String)" Name="lstAssetsNamesText" />
       <Variable x:TypeArguments="x:String" Name="strAssetValor" />
@@ -110,7 +117,7 @@
             </ui:AssignOperation.To>
             <ui:AssignOperation.Value>
               <InArgument x:TypeArguments="scg:List(x:String)">
-                <CSharpValue x:TypeArguments="scg:List(x:String)" sap2010:WorkflowViewState.IdRef="CSharpValue`1_48">new List&lt;string&gt; {"EmailAddressUserAdmins", "EmailAddressUserExperts", "UrlAMT"}</CSharpValue>
+                <CSharpValue x:TypeArguments="scg:List(x:String)" sap2010:WorkflowViewState.IdRef="CSharpValue`1_53">new List&lt;string&gt; {"EmailAddressUserAdmins", "EmailAddressUserExperts", "UrlAMT", "UrlAMTDescarga"}</CSharpValue>
               </InArgument>
             </ui:AssignOperation.Value>
           </ui:AssignOperation>
@@ -122,10 +129,11 @@
             </ui:AssignOperation.To>
             <ui:AssignOperation.Value>
               <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)">
-                <CSharpValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" sap2010:WorkflowViewState.IdRef="CSharpValue`1_50" xml:space="preserve">new Dictionary&lt;string, object&gt; {
+                <CSharpValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" sap2010:WorkflowViewState.IdRef="CSharpValue`1_52" xml:space="preserve">new Dictionary&lt;string, object&gt; {
 	{"QueueName", "ClientesAMT"},
 	{"LogMessage_GetTransactionDataError", "Error getting transaction data for Transaction Number: "},
-	{"ExScreenshotsFolderPath", @"BANCO PICHINCHA\FINANZAS\UiPath_RPA_DayanaRodriguez\ARCHIVOS INTERMEDIOS\SCREENSHOTS"}
+	{"ExScreenshotsFolderPath", System.IO.Path.Combine(Environment.GetFolderPath(Environment.SpecialFolder.UserProfile), @"BANCO PICHINCHA\FINANZAS\UiPath_RPA_DayanaRodriguez\ARCHIVOS INTERMEDIOS\SCREENSHOTS")},
+	{"SalidaFolderPath", System.IO.Path.Combine(Environment.GetFolderPath(Environment.SpecialFolder.UserProfile), @"BANCO PICHINCHA\FINANZAS\UiPath_RPA_DayanaRodriguez\ARCHIVOS SALIDA")}
 }</CSharpValue>
               </InArgument>
             </ui:AssignOperation.Value>
